# Meson-Project-Template

./: .gitignore  meson.build
src/: meson.build
src/Drivers/: meson.build
src/Lib/: meson.build
src/Lib/example/: example.h  meson.build
src/Utility/: meson.build
subprojects/: clangformat.wrap  fff.wrap  unity.wrap
test/: meson.build
tools/: create_test_files.sh
